--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Projeto de Aula TechBite",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
