--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.2.0"
   }
 }
