--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ yarn-error.log*
 lerna-debug.log*
 
 .gradle/
+.gradle/**
 build/
+build/**
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
